--- a/org/syllabus.org
+++ b/org/syllabus.org
@@ -339,53 +339,53 @@ and falling behind.
 
 - Class session schedule
   #+name: tab:schedule
-  | WK | NO | DATE       | TESTS      | TEXTBOOK                     | ASSIGNMENT[fn:1]                   |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  1 |  1 | Tue-16-Aug | Entry Test |                              | 1. Emacs tutorial                  |
-  |    |  2 | Thu-18-Aug |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  2 |  3 | Tue-23-Aug | Test 1     | 13. Elementary statistics    | 2. Summary statistics              |
-  |    |  4 | Thu-25-Aug |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  3 |  5 | Tue-30-Aug | Test 2     |                              | 3. Probability and distributions   |
-  |    |  6 | Thu-01-Sep |            |                              | 1st Sprint Review                  |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  4 |  7 | Tue-06-Sep | Test 3     |                              | 4. Central Limit Theorem           |
-  |    |  8 | Thu-08-Sep |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  5 |  9 | Tue-13-Sep | Test 4     | 14. Basic data visualization | 5. Correlation/experiments         |
-  |    | 10 | Thu-15-Sep |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  6 | 11 | Tue-20-Sep | Test 5     |                              | 6. Summary statistics in R         |
-  |    | 12 | Thu-22-Sep |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  7 | 13 | Tue-27-Sep | Test 6     |                              | 7. Random numbers/probability in R |
-  |    | 14 | Thu-29-Sep |            |                              | 2nd Sprint Review                  |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  8 | 15 | Thu-06-Oct | Test 7     | 15. Probability              | 8. Central limit theorem in R      |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |  9 | 16 | Tue-11-Oct | Test 8     |                              | 9. Correlation/experiments in R    |
-  |    | 17 | Thu-13-Oct |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 10 | 18 | Tue-18-Oct | Test 9     |                              | 10. The binomial distribution      |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 11 | 19 | Tue-25-Oct | Test 10    |                              | 11. Laws of probability            |
-  |    | 20 | Thu-27-Oct |            |                              | 3rd Sprint Review                  |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 12 | 21 | Tue-01-Nov | Test 11    | 16. Distributions            | 12. Bayesian statistics            |
-  |    | 22 | Thu-03-Nov |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 13 | 23 | Tue-08-Nov | Test 12    |                              | 13. Related distributions          |
-  |    | 24 | Thu-10-Nov |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 14 | 25 | Tue-15-Nov | Test 13    | 20. Linear regression        | 14. Simple linear regression       |
-  |    | 26 | Thu-17-Nov |            |                              |                                    |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  | 15 | 27 | Mon-22-Nov | Test 14    |                              | 15. Predictions and model objects  |
-  |----+----+------------+------------+------------------------------+------------------------------------|
-  |    | 28 | Tue-29-Nov |            |                              | Final Sprint review                |
-  |    | 29 | Thu-01-Dec |            |                              | Final Sprint review                |
-  |----+----+------------+------------+------------------------------+------------------------------------|
+  | WK | NO | DATE       | TESTS      | ASSIGNMENT[fn:1]                   | TEXTBOOK                     |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  1 |  1 | Tue-16-Aug | +Entry Test+ | 1. +Emacs tutorial+                  |                              |
+  |    |  2 | Thu-18-Aug |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  2 |  3 | Tue-23-Aug | +Test 1+     | 2. +Summary statistics+              | 13. Elementary statistics    |
+  |    |  4 | Thu-25-Aug |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  3 |  5 | Tue-30-Aug | +Test 2+     | 3. +Probability and distributions+   |                              |
+  |    |  6 | Thu-01-Sep |            | +1st Sprint Review+                  |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  4 |  7 | Tue-06-Sep | +Test 3+     | 4. Central Limit Theorem           |                              |
+  |    |  8 | Thu-08-Sep |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  5 |  9 | Tue-13-Sep | Test 4     | 5. Correlation/experiments         | 14. Basic data visualization |
+  |    | 10 | Thu-15-Sep |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  6 | 11 | Tue-20-Sep | Test 5     | 6. Summary statistics in R         |                              |
+  |    | 12 | Thu-22-Sep |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  7 | 13 | Tue-27-Sep | Test 6     | 7. Random numbers/probability in R |                              |
+  |    | 14 | Thu-29-Sep |            | 2nd Sprint Review                  |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  8 | 15 | Thu-06-Oct | Test 7     | 8. Central limit theorem in R      | 15. Probability              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |  9 | 16 | Tue-11-Oct | Test 8     | 9. Correlation/experiments in R    |                              |
+  |    | 17 | Thu-13-Oct |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 10 | 18 | Tue-18-Oct | Test 9     | 10. The binomial distribution      |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 11 | 19 | Tue-25-Oct | Test 10    | 11. Laws of probability            |                              |
+  |    | 20 | Thu-27-Oct |            | 3rd Sprint Review                  |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 12 | 21 | Tue-01-Nov | Test 11    | 12. Bayesian statistics            | 16. Distributions            |
+  |    | 22 | Thu-03-Nov |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 13 | 23 | Tue-08-Nov | Test 12    | 13. Related distributions          |                              |
+  |    | 24 | Thu-10-Nov |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 14 | 25 | Tue-15-Nov | Test 13    | 14. Simple linear regression       | 20. Linear regression        |
+  |    | 26 | Thu-17-Nov |            |                                    |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  | 15 | 27 | Mon-22-Nov | Test 14    | 15. Predictions and model objects  |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
+  |    | 28 | Tue-29-Nov |            | Final Sprint review                |                              |
+  |    | 29 | Thu-01-Dec |            | Final Sprint review                |                              |
+  |----+----+------------+------------+------------------------------------+------------------------------|
 
 * Footnotes
 
