--- a/org/agenda.org
+++ b/org/agenda.org
@@ -462,7 +462,7 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 [[../img/charlesII.jpg]]
 
 - [ ] 1654: [[https://web.universiteitleiden.nl/fsw/verduin/stathist/sh_17.htm][letters between Blaise Pascal and Pierre de Fermat]]
-- [ ] Featured: [[https://retractionwatch.com/retraction-watch-database-user-guide/retraction-watch-database-user-guide-appendix-b-reasons/][retraction watch]]
+- [ ] Featured application: [[https://retractionwatch.com/retraction-watch-database-user-guide/retraction-watch-database-user-guide-appendix-b-reasons/][retraction watch]]
 - [ ] Review: test 4
 - [ ] Review: DataCamp lesson probability and distributions
 - [ ] Practice: statistical variables (continued)
@@ -471,15 +471,27 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
 
 ** TODO Review: test 4 - raw data, probability and stats
 
+- [ ] Longitude/latitude are what kind of data?
+- [ ] When researching, do you always need a "literature review"?
+- [ ] Which activities connect "population" and "sample"?
+
 ** TODO Review: probability and distributions (DataCamp)
 
 1) What is the probability for an event B given that an event A has
-   already happened? (E.g. selecting special orders over $150 from a
-   larger sample of orders.)
+   already happened.
+   #+begin_notes
+     Formula: P(B|A) = P(A and B) / P(A)
+   #+end_notes
 
 2) How can you visualize the conditional probability formula for
    events A and B?
 
+   #+begin_notes
+     Example: A = Order for kitchen products, B = Orders over $150
+     #+attr_html: :width 500px
+     [[../img/kitchen1.png]]
+   #+end_notes
+   
 3) A men's soccer team plays soccer zero, one, or two days a week:
    - the probability that they play zero days is .2,
    - the probability that they play one day is .5, and
@@ -521,7 +533,13 @@ On (2): check Judeah Pearl's [[https://en.wikipedia.org/wiki/The_Book_of_Why]["B
     abline(v = sum(x /6),col="blue",lwd=2)
    #+end_src
 
+5) What is the probability that a baby will be born between midnight
+   and 8 am? (If all hours are equally probable.)
 
+   #+begin_notes
+     A day has 24 hours - midnight to 8 am is 8/24 or 1/3, so 33%. 
+   #+end_notes
+   
 ** IN PROGRESS Raw data: statistical variables (practice)
 ** TODO Lecture/practice: summary statistics
 
