--- a/org/syllabus.org
+++ b/org/syllabus.org
@@ -353,7 +353,7 @@ and falling behind.
   |  4 |  7 | Tue-06-Sep | +Test 3+     | 4. Central Limit Theorem           |                              |
   |    |  8 | Thu-08-Sep |            |                                    |                              |
   |----+----+------------+------------+------------------------------------+------------------------------|
-  |  5 |  9 | Tue-13-Sep | Test 4     | 5. Correlation/experiments         | 14. Basic data visualization |
+  |  5 |  9 | Tue-13-Sep | +Test 4+     | 5. Correlation/experiments         | 14. Basic data visualization |
   |    | 10 | Thu-15-Sep |            |                                    |                              |
   |----+----+------------+------------+------------------------------------+------------------------------|
   |  6 | 11 | Tue-20-Sep | Test 5     | 6. Summary statistics in R         |                              |
